# food-images-finetuning

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 00_EDA_Dataset_and_Inference.ipynb
src/food_images_finetuning/: config.py
src/food_images_finetuning/configs/: config_1_6B.yaml  config_450M.yaml  finetune_0.yaml  finetune_1.yaml  finetune_2.yaml  finetune_3.yaml
src/food_images_finetuning/evaluation/: __init__.py  evaluate_base_model.py  evaluate_fine_tune_model.py
src/food_images_finetuning/loaders/: load_dataset.py  load_model.py
src/food_images_finetuning/schemas/: dataset.py  finetune.py  model.py
src/food_images_finetuning/training/: train_on_modal.py  utils.py
